# up2gether-v2

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  BUSINESS.md  DEPLOY.md  README.md  dev.bat  docker-compose.yml
.github/workflows/: ci.yml  deploy-backend.yml
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2db0062df1b3_drop_push_subscriptions.py  358242a31020_billing_foundation.py  3a91adb706e0_theme_image_url.py  4b1f2808576b_add_vote_stages_multistage.py  5b0259ca938e_baseline_schema.py  7c2f4e9b1a30_theme_cycles.py  819d510cbd34_add_group_current_game.py  8d4a1f9c2e10_game_steam_meta.py  9f3e1c4a7b20_notifications.py  a3c5f1e90211_steam_deep.py  a9e7f4c218b3_add_locale_to_users.py  b1c4e8f23a56_add_theme_votes_user_idx.py  c7d3e9f45b12_add_game_source.py  d8a4f1c09b27_add_events_table.py  de5c8c1b781c_add_token_generation_to_users.py  e4a7d2c9f301_drop_themes.py  f3b8c1d4a712_add_publisher_to_games.py  f5a2fcb7932f_add_group_discord_visuals.py
backend/app/: main.py
backend/app/core/: audit.py  config.py  database.py  logging.py  rate_limit.py  security.py  token_crypto.py
backend/app/domain/: enums.py  tiers.py
backend/app/integrations/: builtin_catalog.py  discord.py  google_calendar.py  steam.py
backend/app/jobs/: events_retention.py  price_check_cron.py  theme_cycle_cron.py
backend/app/models/: __init__.py  base.py  event.py  game.py  group.py  notification.py  session.py  theme.py  user.py  vote.py
backend/app/repositories/: game_repo.py  group_repo.py  session_repo.py  theme_repo.py  user_repo.py  vote_repo.py
backend/app/routers/: admin.py  auth.py  events.py  games.py  google.py  groups.py  health.py  notifications.py  public.py  sessions.py  steam.py  themes.py  users.py  votes.py
backend/app/schemas/: auth.py  game.py  group.py  session.py  theme.py  user.py  vote.py
backend/app/services/: auth_service.py  auto_resync.py  discord_actions.py  discord_commands.py  discord_presence.py  events.py  game_service.py  group_current_game_audit.py  group_member_profile.py  group_profile_service.py  group_service.py  leader.py  metrics.py  notifications.py  realtime.py  session_service.py  theme_engine.py  theme_service.py  user_service.py  viability.py  vote_audit.py  vote_engine.py  vote_notifications.py  vote_service.py
backend/scripts/: backfill_events.py  seed_games.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin_metrics.py  test_auth.py  test_discord_actions.py  test_events.py  test_games.py  test_google_oauth.py  test_groups.py  test_health.py  test_lgpd.py  test_onboarding.py  test_owner_deletion.py  test_realtime_concurrent.py  test_sessions.py  test_steam.py  test_telemetry.py  test_themes.py  test_user_model.py  test_users.py  test_votes.py
backend/tests/unit/: test_config_boot_guard.py  test_hardening.py  test_rate_limit.py  test_realtime.py  test_security.py  test_theme_engine.py  test_tiers.py  test_viability.py  test_vote_engine.py
docs/security/: dns-hardening.md
frontend/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vercel.json  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/public/: robots.txt  sitemap.xml  sw.js
frontend/public/.well-known/: security.txt
frontend/scripts/: screenshots.mjs
frontend/src/: index.css  main.tsx
frontend/src/app/: App.tsx  RequireAuth.tsx
frontend/src/components/: SteamThumb.tsx
frontend/src/i18n/: en.ts  index.ts  pt.ts  steamGenres.ts
frontend/src/lib/: api.ts  api.types.ts  constants.ts  (+4 more)
(+148 files in other folders)
