[project]
name = "up2gether-backend"
version = "2.0.0"
description = "up2gether backend — plataforma de sessoes gaming"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "pyjwt>=2.9.0",
    "httpx>=0.28.1",
    # python-multipart: bump fecha GHSA de DoS via preamble grande (0.0.21+)
    "python-multipart>=0.0.25",
    # mako: transitive via alembic, mas forca floor pra fechar path traversal
    # double-slash em TemplateLookup (GHSA). 1.3.11+ tem o fix.
    "mako>=1.3.11",
    "structlog>=24.4.0",
    "apscheduler>=3.11.0",
    "python-socketio>=5.12.1",
    "python-dateutil>=2.9.0",
    "google-api-python-client>=2.156.0",
    "google-auth>=2.37.0",
    "google-auth-oauthlib>=1.2.1",
    "discord.py>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres]>=4.9.0",
    "asgi-lifespan>=2.1.0",
    "ruff>=0.8.4",
    "mypy>=1.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "N", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "N"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/integration", "tests/unit"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: integration tests (requires Docker for testcontainers)",
    "unit: pure unit tests, no external deps",
]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["alembic/"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*"]
